
v6.17
(xx/09/18)

Changes / Improvements / Optimizations:
 - General | Improved detection of permissions support during user data transfers: https://github.com/Fourdee/DietPi/issues/2096
 - DietPi-Update | You now have the option to view the changelog, prior to updating: https://github.com/Fourdee/DietPi/issues/2081
 - DietPi-Software | Card/CalDAV request redirection was added to new Baikal, ownCloud and Nextcloud installs. Now only the servers domain/IP need to be entered on Card/CalDAV clients, without any further path to the DAV endpoints: https://github.com/Fourdee/DietPi/issues/2057
 - DietPi-Drive_Manager | Formatting: Now has the option to format the whole drive, or patition only, for drives with existing partitions.
 - DietPi-Drive_Manager | Mounting NTFS drives now enabled native linux permissions support (eg: you can use this as your userdata location). Many thanks to @Random90 for making this possible! https://github.com/Fourdee/DietPi/issues/2096#issuecomment-425553333

Bug Fixes:
 - DietPi-Config | If '/var/lib/dietpi/dietpi-wifi.db' has not been created yet, it will be generated automatically to allow for WiFi array init: https://github.com/Fourdee/DietPi/issues/2087#issuecomment-423836528
 - DietPi-Survey | Resolved an issue where dietpi-survey under mode 1 would not generate the survey file.
 - DietPi-Software | MPD: Now runs under the group 'dietpi' and user 'root', allowing access to music directories when contained on samba networked drives: https://github.com/Fourdee/DietPi/issues/2092
 - DietPi-Software | Fixed an issue where software uninstalls could have failed due to dependant packages. Thanks to @dynobot for reporting this issue: https://github.com/Fourdee/DietPi/issues/2091
 - DietPi-Software | Webservers/PHP: Fixed an issue, where PHP was not installed when a webserver was installed directly via "dietpi-software install 8X".