@@ -182,9 +182,6 @@ CONFIG_SOUNDCARD=none
 #	NB: Do not modify, you must use dietpi-config to configure/set options
 CONFIG_LCDPANEL=none
 
-#Prefer IPversion (for: APT, wget) | auto (let system decide) / ipv4 (force) / ipv6 (prefer) | eg: force IPv4 with CONFIG_PREFER_IPVERSION=ipv4
-CONFIG_PREFER_IPVERSION=ipv4
-
 #Apt mirrors which are applied to /etc/apt/sources.list | Values here will also be applied during 1st run setup
 #	Raspbian = https://www.raspbian.org/RaspbianMirrors
 #	Debian = https://www.debian.org/mirror/official#list
