@@ -6,7 +6,7 @@
 # Includes DSO modules
 Include /etc/proftpd/modules.conf
 
-# Set off to disable IPv6 support which is annoying on IPv4 only boxes.
+# Set off to disable IPv6 support which is problematic on IPv4 only boxes.
 UseIPv6                         on
 # If set on you can experience a longer connection delay in many cases.
 IdentLookups                    off
