@@ -3085,16 +3085,6 @@ _EOF_
 
 		fi
 
-		#IPv6 status
-		local ipv6_enabled=1
-		local ipv6_status_text='[On]'
-		if [[ ! -d /proc/sys/net/ipv6 ]]; then
-
-			ipv6_enabled=0
-			ipv6_status_text='[Off]'
-
-		fi
-
 		#Proxy settings (global vars, force an int to obtain current values stored in dietpi.txt)
 		Load_Proxy_Vars
 
@@ -3128,11 +3118,10 @@ _EOF_
 
 		fi
 
-		G_WHIP_MENU_ARRAY+=('IPv6' "$ipv6_status_text | Toggle IPv6 Support")
 		G_WHIP_MENU_ARRAY+=('Test' 'Run the Internet Connection Test')
 		G_WHIP_MENU_ARRAY+=('Proxy' 'Configure proxy settings')
 
-		G_WHIP_MENU "Ethernet     : $eth_hardware_text | $eth_disabled_text | $eth_connected_text \nWifi         : $wlan_hardware_text | $wlan_disabled_text | $wlan_connected_text\nIPv6         : $ipv6_status_text\nInternet     : $Internet_connected_text\nProxy        : $proxy_state_text"
+		G_WHIP_MENU "Ethernet     : $eth_hardware_text | $eth_disabled_text | $eth_connected_text \nWifi         : $wlan_hardware_text | $wlan_disabled_text | $wlan_connected_text\nInternet     : $Internet_connected_text\nProxy        : $proxy_state_text"
 		if (( $? == 0 )); then
 
 			#Return to this Menu
@@ -3155,71 +3144,6 @@ _EOF_
 					REBOOT_REQUIRED=1
 
 					G_WHIP_MSG 'Onboard WiFi modules setting applied\n\nNB: A reboot is required for the changes to take effect.'
-
-				;;
-
-				'IPv6')
-
-					#Disable
-					if (( $ipv6_enabled )); then
-
-						G_WHIP_YESNO 'IPv6 is currently enabled. Would you like to disable it?\n\n - A system restart is required for settings to take effect.\n - Disabling IPv6 may break certain programs that rely on it.'
-						if (( $? == 0 )); then
-
-							# - On amd64 images, IPv6 is no kernel module, but can be disabled via grub: https://github.com/Fourdee/DietPi/issues/1343#issuecomment-359652751
-							if (( $G_HW_ARCH == 10 )); then
-
-								if ! grep -qi '^[[:blank:]]*GRUB_CMDLINE_LINUX_DEFAULT=".*ipv6.disable=1' /etc/default/grub; then
-
-									sed -i '/^[[:blank:]]*GRUB_CMDLINE_LINUX_DEFAULT="/s/="/="ipv6.disable=1 /' /etc/default/grub
-									update-grub
-
-								fi
-
-							# - On all other images, IPv6 is a kernel module, which can be blacklisted.
-							else
-
-								# Since RPi kernel 4.14.y, IPv6 is no kernel module as well, but keep blacklist as fail-safe:
-								(( $G_HW_MODEL < 10 )) && sed -Ei '/root=/s/( ipv6.disable=.|$)/ ipv6.disable=1/' /boot/cmdline.txt
-								echo 'blacklist ipv6' > /etc/modprobe.d/99-dietpi-blacklist-ipv6.conf
-
-							fi
-
-							# - APT force IPv4
-							echo 'Acquire::ForceIPv4 "true";' > /etc/apt/apt.conf.d/99-dietpi-force-ipv4
-							# - Wget prefer IPv4
-							G_CONFIG_INJECT 'prefer-family =' 'prefer-family = IPv4' /etc/wgetrc
-							REBOOT_REQUIRED=1
-
-						fi
-
-					#Enable
-					else
-
-						G_WHIP_YESNO "IPv6 is currently disabled. Would you like to enable it?\n\n - NB: A system restart is required for settings to take effect."
-						if (( $? == 0 )); then
-
-							if (( $G_HW_ARCH == 10 )); then
-
-								sed -i '/^[[:blank:]]*GRUB_CMDLINE_LINUX_DEFAULT="/s/ipv6.disable=. //' /etc/default/grub
-								update-grub
-
-							else
-
-								(( $G_HW_MODEL < 10 )) && sed -i '/root=/s/ ipv6.disable=.//' /boot/cmdline.txt
-								rm /etc/modprobe.d/99-dietpi-blacklist-ipv6.conf &> /dev/null
-
-							fi
-
-							# - APT allow IPv6 but do not force it: https://github.com/Fourdee/DietPi/issues/472#issuecomment-356444922
-							rm /etc/apt/apt.conf.d/99-dietpi-force-ipv4 &> /dev/null
-							# - Wget prefer IPv6
-							G_CONFIG_INJECT 'prefer-family =' 'prefer-family = IPv6' /etc/wgetrc
-							REBOOT_REQUIRED=1
-
-						fi
-
-					fi
 
 				;;
 
