@@ -3566,15 +3566,7 @@ _EOF_
 		if (( ${aSOFTWARE_INSTALL_STATE[$INSTALLING_INDEX]} == 1 )); then
 
 			Banner_Installing
-			# If IPv6 is disabled, nginx service fails to start up due to IPv6 statement in default site.
-			# This leads to APT failure, thus we copy our non-IPv6 config in place first:
-			if [[ ! -d /proc/sys/net/ipv6 ]]; then
 
-				[[ -d /etc/nginx/sites-available ]] || mkdir -p /etc/nginx/sites-available
-				cp /DietPi/dietpi/conf/nginx.conf /etc/nginx/nginx.conf
-				cp /DietPi/dietpi/conf/nginx.site-available-default /etc/nginx/sites-available/default
-
-			fi
 			G_AGI nginx-light
 
 		fi
