@@ -22,7 +22,6 @@ $FP_SCRIPT 		rpi-opengl		vc4-kms-v3d/vc4-fkms-v3d/disable
 $FP_SCRIPT 		i2c			enable/disable/khz
 $FP_SCRIPT 		wificountrycode		GB/US/DE
 $FP_SCRIPT 		wifimodules		enable/disable/onboard_enable/onboard_disable
-$FP_SCRIPT 		preferipversion		auto/ipv4/ipv6
 $FP_SCRIPT 		bluetooth 		enable/disable
 $FP_SCRIPT 		serialconsole		enable/disable
 $FP_SCRIPT 		soundcard 		target_card (non-matching name for reset to default) add '-eq' to target_card string, enable alsa eq on card. HW:x,x (specify target card and device index eg: HW:9,1)
@@ -1056,40 +1055,6 @@ _EOF_
 	#/////////////////////////////////////////////////////////////////////////////////////
 	# Network
 	#/////////////////////////////////////////////////////////////////////////////////////
-
-	Prefer_IPversion(){
-
-		if [[ $INPUT_DEVICE_VALUE == 'ipv4' ]]; then
-
-			# - APT force IPv4
-			echo 'Acquire::ForceIPv4 "true";' > /etc/apt/apt.conf.d/99-dietpi-force-ipv4
-			# - Wget prefer IPv4
-			G_CONFIG_INJECT 'refer-family =' 'prefer-family = IPv4' /etc/wgetrc
-
-		elif [[ $INPUT_DEVICE_VALUE == 'ipv6' ]]; then
-
-			# - APT allow IPv6
-			rm /etc/apt/apt.conf.d/99-dietpi-force-ipv4 &> /dev/null
-			# - Wget prefer IPv6
-
-		elif [[ $INPUT_DEVICE_VALUE == 'auto' ]]; then
-
-			# - APT allow IPv6
-			rm /etc/apt/apt.conf.d/99-dietpi-force-ipv4 &> /dev/null
-			# - Wget back to default
-			grep -q '^[[:blank:]]*prefer-family =' /etc/wgetrc &&
-			sed -i 's/^[[:blank:]]*prefer-family =/#prefer-family =/' /etc/wgetrc
-
-		else
-
-			Unknown_Input_Mode
-
-		fi
-
-		#Update dietpi.txt global
-		G_CONFIG_INJECT 'CONFIG_PREFER_IPVERSION=' "CONFIG_PREFER_IPVERSION=$INPUT_DEVICE_VALUE" /DietPi/dietpi.txt
-
-	}
 
 	Wifi_Modules_Main(){
 
@@ -2134,10 +2099,6 @@ _EOF_
 	elif [[ $INPUT_DEVICE_NAME == 'wifimodules' ]]; then
 
 		Wifi_Modules_Main
-
-	elif [[ $INPUT_DEVICE_NAME == 'preferipversion' ]]; then
-
-		Prefer_IPversion
 
 	elif [[ $INPUT_DEVICE_NAME == 'wificountrycode' ]]; then
 
