@@ -1296,6 +1296,24 @@ _EOF_
 
 			fi
 			#-------------------------------------------------------------------------------
+			#IPv6 now enabled by default, and, all previous disable options removed: https://github.com/Fourdee/DietPi/issues/2027
+			# - APT allow IPv6
+			rm /etc/apt/apt.conf.d/99-dietpi-force-ipv4 &> /dev/null
+
+			# - Wget back to default
+			sed -i '/^prefer-family/d' /etc/wgetrc
+
+			# - Re-enable IPv6
+			(( $G_HW_MODEL < 10 )) && sed -i '/root=/s/ ipv6.disable=.//' /boot/cmdline.txt
+			rm /etc/modprobe.d/99-dietpi-blacklist-ipv6.conf &> /dev/null
+
+			if (( $G_HW_ARCH == 10 )); then
+
+				sed -i '/^[[:blank:]]*GRUB_CMDLINE_LINUX_DEFAULT="/s/ipv6.disable=. //' /etc/default/grub
+				update-grub
+
+			fi
+			#-------------------------------------------------------------------------------
 			#Reinstalls:
 			#	myMPD: https://twitter.com/ta11/status/1045978421967421440
 			if (( $G_DIETPI_INSTALL_STAGE == 1 )); then
