@@ -99,9 +99,6 @@
 		# - Generate Swapfile
 		/DietPi/dietpi/func/dietpi-set_dphys-swapfile $(grep -m1 '^[[:blank:]]*AUTO_SETUP_SWAPFILE_SIZE=' /DietPi/dietpi.txt | sed 's/^[^=]*=//') "$(grep -m1 '^[[:blank:]]*AUTO_SETUP_SWAPFILE_LOCATION=' /DietPi/dietpi.txt | sed 's/^[^=]*=//')"
 
-		# - IPversion preference: https://github.com/Fourdee/DietPi/issues/472
-		/DietPi/dietpi/func/dietpi-set_hardware preferipversion "$(grep -m1 '^[[:blank:]]*CONFIG_PREFER_IPVERSION=' /DietPi/dietpi.txt | sed 's/^[^=]*=//')"
-
 		# - Apply Timezone
 		local autoinstall_timezone="$(grep -m1 '^[[:blank:]]*AUTO_SETUP_TIMEZONE=' /DietPi/dietpi.txt | sed 's/^[^=]*=//' )"
 		if [[ $autoinstall_timezone != $(</etc/timezone) ]]; then
