@@ -4,6 +4,7 @@ v6.17
 
 Changes / Improvements / Optimizations:
  - General | Improved detection of permissions support during user data transfers: https://github.com/Fourdee/DietPi/issues/2096
+ - General | IPv6: Due to the requirements of various software titles available in dietpi-software (eg: nginx, redis-server), and that IPv6 is slowly becoming more common place, IPv6 is now enabled by default, and, can no longer be disabled in DietPi scripts: https://github.com/Fourdee/DietPi/issues/2027
  - DietPi-Update | You now have the option to view the changelog, prior to updating: https://github.com/Fourdee/DietPi/issues/2081
  - DietPi-Software | Card/CalDAV request redirection was added to new Baikal, ownCloud and Nextcloud installs. Now only the servers domain/IP need to be entered on Card/CalDAV clients, without any further path to the DAV endpoints: https://github.com/Fourdee/DietPi/issues/2057
  - DietPi-Drive_Manager | Formatting: Now has the option to format the whole drive, or patition only, for drives with existing partitions.
